--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ html {
     color: black;
     text-align: center;
     font-family: 'Maven Pro', sans-serif;
+    height: 100%;
+    margin: 0; 
+    padding: 0;
 }
 
 #home-body {
@@ -433,6 +436,18 @@ li.active a, a:hover, a:active {
   z-index: 2000;
 }
 
+#story-body-2 {
+  background-color: #541211;
+  background-position: 0vh 0vh;
+  margin: 0;
+  padding: 0;
+  background-size: 100%;
+  height: 100%;
+  width: 100%;
+  cursor: default;
+  z-index: 2000;
+}
+
 .story-txt {
   width: 65%;
   height: 65%;
@@ -441,6 +456,16 @@ li.active a, a:hover, a:active {
   left: 7%;
   border: solid #000;
   border-width: 1px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.story-txt-2 {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F3E9D2;
   margin: auto;
   overflow: hidden;
 }
