--- a/style.css
+++ b/style.css
@@ -1,387 +1,72 @@
 :root {
-    --dark: #000000; 
-	--light: #FFFFFF; 
-	--blocks: #99B3C6;
-    --transition: all 0.3s ease 0s; 
-    /* all variables above */
+  --dark: #000000; 
+ --light: #FFFFFF; 
+ --blocks: #99B3C6;
+  --transition: all 0.3s ease 0s; 
+  /* all variables above */
+  
 }
-
-html {
-    color: black;
-    text-align: center;
-    font-family: 'Maven Pro', sans-serif;
-    height: 100%;
-    margin: 0; 
-    padding: 0;
-}
-
-#home-body {
-    background-color: #EEEEEE;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 95%;
-    width: 94%;
-    overflow: hidden;
-}
-
 body {
-  margin: 20px auto;
-  padding: 0 100px;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-.description {
-  max-width: 600px;
-  margin: 0 auto;
-  color: black;
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
-
-div, img, footer {
-  position: relative;
-  box-sizing: border-box;
-}
-
-/* navigation */
-
-.nav-link {
-    font-family: Maven Pro;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 35px;
-    margin-right: 3vw;
-}
-
-/* general links appearance*/
-
-a:link {color: #000000; text-decoration: none; 
-} 
-a:visited {color: #000000; 
-} 
-a:focus {color: #000000; 
-} 
-a:hover {
-    color: #6396B3; 
-} 
-a:active {color: blue; 
-} 
-
-/* CSS styling for splash screen */
-.splash {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(5, 91, 148, 0.8) 0%, rgba(5, 91, 148, 0.44) 100%);    
-    z-index: 200;
-    color: white;
-    text-align: center;
-    line-height: 30vh;
-    cursor: pointer;
-}
-
-.splash.display-none {
-    position: fixed;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -10;
-    color: white;
-    text-align: center;
-    line-height: 20vh;
-    transition: all 0.5s;
-}
-
-/* Splash screen text fade in keyframe function */
-@keyframes fadeIn{
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-/* Splash screen image and text fade in */
-.splash-logo {
-    opacity: 0;
-    animation: fadeIn 1s ease-in forwards;
-    display: block;
-    margin: 0 auto;
-    max-width: 150px;
-    max-height: 150px;
-    width: auto;
-    height: auto;
-    margin-top: 10%;
-    top: 0;
-    left: 0;
-    z-index: 200;
-    line-height: 90vh;
-    
-}
-
+.marker {
+  background-image: url('images/map.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}  
 .splash-txt-1 {
-    font-size: 100px;
-    font-family: 'tt_blackitalic', sans-serif;
-    opacity: 0;
-    animation: fadeIn 1s ease-in forwards;
-    animation-delay: 1s;
+  font-size: 100px;
+  font-family: 'tt_blackitalic', sans-serif;
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+  animation-delay: 1s;
 }
 
 .splash-txt-2 {
-    font-family: 'Maven Pro', sans-serif;
-    font-size: 30px;
-    opacity: 0;
-    animation: fadeIn 1s ease-in forwards;
-    animation-delay: 2s;
-    cursor: pointer;
-}
-
-/* template's settings
-
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-family: "Roboto Condensed", Helvetica, sans-serif;
-  font-weight: 300;
-}
-
-h1 {
-  font-size: 36pt;
-}
-
-h2 {
-  font-size: 24pt;
-}
-
-h3 {
-  font-size: 18pt;
-}
-
-h4 {
-  font-size: 16pt;
-}
-
-h5 {
-  font-size: 14pt;
-}
-
-h6 {
-  font-size: 12pt;
-}
-
-p {
-  font-size: 12pt;
-  margin-bottom: 12pt;
-}
-
-strong {
-  font-weight: 900;
-  font-family: "Roboto Condensed", Helvetica, sans-serif;
-  color: black;
-}
-
-a {
-  -webkit-transition: color 0.25s ease-in-out;
-  transition: color 0.25s ease-in-out;
-  font-family: "Roboto Condensed", Helvetica, sans-serif;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #dff3fd;
-}
-a:visited {
-  color: #dff3fd;
-}
-li.active a, a:hover, a:active {
-  color: #e5e5e5;
-}
-*/
-
-/* popup */
-.enterButton {
-	background-color:#BAD1E5;
-	display:inline-block;
-	cursor:pointer;
-  font-weight: 500;
-	font-size: 1em;
-	padding:8px 30px;
-	text-decoration: none;
-}
-.enterButton:hover {
-	background-color:#BAD1E5; /*could have it change colors on hover by changing this*/
-}
-.enterButton:active {
-	position:relative;
-	top:1px;
-}
-.content h2{
-  color: #184876
-}
-
-/* map */
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.centered-y {
-  position: absolute;
-  margin-left: 5%;
-  width: 90%;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-.distribution-map {
-  position: relative;
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  margin: 0 auto;
-}
-.distribution-map > img {
-  width: 100%;
-  position: relative;
-  margin: 0;
-  padding: 0;
-}
-.distribution-map .map-point {
-  cursor: pointer;
-  outline: none;
-  z-index: 0;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  /*opacity: 0.8;*/
-  -webkit-transform: translate(-50%, -39%);
-  transform: translate(-50%, -39%);
-  -moz-transition: opacity 0.25s ease-in-out 0.25s, width 0.25s ease-in-out 0.25s, height 0.25s ease-in-out 0.25s, z-index 0.25s ease-in-out 0.25s;
-  -o-transition: opacity 0.25s ease-in-out 0.25s, width 0.25s ease-in-out 0.25s, height 0.25s ease-in-out 0.25s, z-index 0.25s ease-in-out 0.25s;
-  -webkit-transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out, z-index 0.25s ease-in-out;
-  -webkit-transition-delay: 0.25s, 0.25s, 0.25s, 0.25s;
-  -webkit-transition: opacity 0.25s ease-in-out 0.25s, width 0.25s ease-in-out 0.25s, height 0.25s ease-in-out 0.25s, z-index 0.25s ease-in-out 0.25s;
-  transition: opacity 0.25s ease-in-out 0.25s, width 0.25s ease-in-out 0.25s, height 0.25s ease-in-out 0.25s, z-index 0.25s ease-in-out 0.25s;
-  background: #D69898;
-  border: 7px solid #ffffff;
-}
-
-.distribution-map .map-point .content {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 30px;
   opacity: 0;
-  -webkit-transition: opacity 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out;
-  width: 100%;
-  height: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  overflow: overlay;
-  font-family: "Maven Pro", sans-serif;
+  animation: fadeIn 1s ease-in forwards;
+  animation-delay: 2s;
+  cursor: pointer;
+  }
 
-}
-.distribution-map .map-point:active, .distribution-map .map-point:focus {
-  margin: 0;
-  padding: 0;
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
-  width: 750px;
-  height: 550px;
-  color: black;
-  z-index: 1;
-  -webkit-transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out;
-}
-.distribution-map .map-point:active .content, .distribution-map .map-point:focus .content {
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
-  -moz-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -o-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -webkit-transition-delay: 0.25s, 0s, 0s;
-  -webkit-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  overflow: hidden;
-  background: #FFFFFF;
+.mapboxgl-popup {
+  max-width: 200px;
 }
 
-.distribution-map .map-point:hover {
-    background-color:#ffffff;    
-    }
-
-.distribution-map .map-point:active .content a:hover, .distribution-map .map-point:active .content a:active, .distribution-map .map-point:focus .content a:hover, .distribution-map .map-point:focus .content a:active {
-  color: #afe1fa;
-}
-
-@font-face {
-    font-family: 'tt_normsbold';
-    src: url('fonts/ttnorms-bold-webfont.woff2') format('woff2'),
-         url('fonts/ttnorms-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'tt_blackitalic';
-    src: url('fonts/ttnorms-blackitalic-webfont.woff2') format('woff2'),
-         url('fonts/ttnorms-blackitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/* Styling for story template */
-
-#template-body {
-  background-color: #5D926E;
-  font-family: 'Catamaran', sans-serif;
-}
-
-.template-head {
-  display: flex;
-  margin-top: -1.4vh;
-  margin-right: -1vh;
-  margin-left: -1vh;
-  
-}
-
-.story-pg-whatif {
-  padding-left: 8vh;
-  margin-top: 3vh;
-}
-
-.story-pg-title {
+.mapboxgl-popup-content {
   text-align: center;
-  font-size: 300%;
-  padding-left: 22%; /* try and put all padding in vh rather than px, for cross screen compatibility*/
-  margin-top: 2vh;
-  position: static;
+  font-family: 'Open Sans', sans-serif;
 }
 
-/* Styling for Sinead-Louisa splash screen */
-.sinead-splash {
+/* CSS styling for splash screen */
+.splash {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.9);   
+  background: linear-gradient(180deg, rgba(5, 91, 148, 0.8) 0%, rgba(5, 91, 148, 0.44) 100%);    
   z-index: 200;
   color: white;
   text-align: center;
-  line-height: 5vh;
+  line-height: 30vh;
+  cursor: pointer;
 }
 
-.sinead-splash.display-none {
+.splash.display-none {
   position: fixed;
   opacity: 0;
   top: 0;
@@ -391,153 +76,113 @@ li.active a, a:hover, a:active {
   z-index: -10;
   color: white;
   text-align: center;
-  line-height: 10vh;
+  line-height: 20vh;
   transition: all 0.5s;
 }
 
-.sinead-txt-1 {
-  font-size: 100px;
-  font-family: 'Cedarville Cursive', cursive;
-  opacity: 0;
-  animation: fadeIn 1s ease-in forwards;
-  margin-top: 40vh;
+/* Splash screen text fade in keyframe function */
+@keyframes fadeIn{
+  from {
+     opacity: 0;
+  }
+  to {
+     opacity: 1;
+  }
 }
 
-.sinead-txt-2 {
-  font-family: "Maven Pro", sans-serif;
-  font-size: 150%;
+/* Splash screen image and text fade in */
+.splash-logo {
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+  display: block;
+  margin: 0 auto;
+  max-width: 150px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+  margin-top: 10%;
+  top: 0;
+  left: 0;
+  z-index: 200;
+  line-height: 90vh;
+  
+}
+
+.splash-txt-1 {
+  font-size: 100px;
+  font-family: 'tt_blackitalic', sans-serif;
   opacity: 0;
   animation: fadeIn 1s ease-in forwards;
   animation-delay: 1s;
-  cursor: pointer;
-  margin-top: 10vh;
 }
 
-.sinead-txt-3 {
-  font-family: "Maven Pro", sans-serif;
-  font-size: 100%;
+.splash-txt-2 {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 30px;
   opacity: 0;
   animation: fadeIn 1s ease-in forwards;
   animation-delay: 2s;
   cursor: pointer;
-  margin-top: 10vh;
 }
-
-/* Styling for Sinead-Louisa webpage */
-
-#story-body {
-  background-image:url("images/sinead/bg-1.jpg");
-  background-color: #541211;
-  background-position: 7vh 0vh;
-  background-repeat: no-repeat;
-  background-size: 93%;
-  font-family: 'Helvetica', sans-serif;
-  cursor: default;
-  z-index: 2000;
-}
-
-#story-body-2 {
-  background-color: #541211;
-  background-position: 0vh 0vh;
-  margin: 0;
-  padding: 0;
-  background-size: 100%;
-  height: 100%;
-  width: 100%;
-  cursor: default;
-  z-index: 2000;
-}
-
-.story-txt {
-  width: 65%;
-  height: 65%;
-  position: absolute;
-  top: 16%;
-  left: 7%;
-  border: solid #000;
-  border-width: 1px;
-  margin: auto;
-  overflow: hidden;
-}
-
-.story-txt-2 {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #F3E9D2;
-  margin: auto;
-  overflow: hidden;
-}
-
-.iframe-ui {
-  margin-top: 0;
-  margin-bottom: -0.7vh;
-}
-
-/*CSS styling for Sinead and Louisa iframe */
-
-#bg-modal {
-  position: fixed; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0; 
-  left: 0;
-  right: 0;
-  bottom: 0;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0,0,0,0.7); /* Black background with opacity */
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-} 
-
-#modal-pic {
+html {
+  color: black;
   text-align: center;
-  padding-top: 5%;
-  cursor: pointer;
+  font-family: 'Maven Pro', sans-serif;
+  height: 100%;
+  margin: 0; 
+  padding: 0;
 }
 
-.modal-email {
-  width: 50%;
+@font-face {
+  font-family: 'tt_normsbold';
+  src: url('fonts/ttnorms-bold-webfont.woff2') format('woff2'),
+     url('fonts/ttnorms-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'tt_blackitalic';
+  src: url('fonts/ttnorms-blackitalic-webfont.woff2') format('woff2'),
+     url('fonts/ttnorms-blackitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.mapboxgl-popup-content {
+  height: 550px;
+  width: 750px;
+  background-color: powderblue;
+  }
+
+img {
   height: 50%;
-  background-color: white;
-  border-radius: 4px;
-  display: none;
-  margin: auto;
-  margin-top: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  line-height: 6.5vh;
-  text-align: center;
-  border-radius: 4%;
+  width: 50%;
+  }
+
+.content h2{
+  color: #184876;
+  font-size: 24pt;
 }
 
-#notif {
-  padding-top: 4vh;
+p {
+  font-size: 12pt;
 }
 
-#modal-email-text {
-  margin-top: 0vh;
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 5vh;
+.enterButton {
+ background-color:#BAD1E5;
+ display:inline-block;
+ cursor:pointer;
+ font-weight: 500;
+  font-size: 1em;
+  color:black;
+ padding:8px 30px;
+ text-decoration: none;
 }
-
-#ui-1 {
-  width: 101%;
+.enterButton:hover {
+ background-color:#BAD1E5; /*could have it change colors on hover by changing this*/
 }
-
-#open-btn {
-  content: url(images/sinead/open.svg);
-  width: 15%;
-  color: white;
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
+.enterButton:active {
+ position:relative;
+ top:1px;
 }
