--- a/countdown.css
+++ b/countdown.css
@@ -1,6 +1,5 @@
 body {
-    /*background-color: #620000; /*if solid color */
-    background-image: linear-gradient(#620000, #FFFFFF); /* if gradient*/ 
+    background-color: #055B94;
     color: white;
     font-size: 20px;
     text-align: center;
