--- a/countdown.css
+++ b/countdown.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #055B94;
+    /*background-color: #620000; /*if solid color */
+    background-image: linear-gradient(#620000, #FFFFFF); /* if gradient*/ 
     color: white;
     font-size: 20px;
     text-align: center;
