--- a/credits-2.css
+++ b/credits-2.css
@@ -9,6 +9,7 @@
 body{
     margin-top: 50px;
 	background: linear-gradient(180deg, #FFBBB1 0%, #FFD386 100%);
+	height:100%;
 }
 
 p, a, h3, h4, h1 {
@@ -34,7 +35,7 @@ h4 { /* span across entire screen */
 p {
 	font-family: 'Maven Pro', sans-serif;
 	letter-spacing: 1px;
-	line-height: 10px;
+	line-height: 13px;
 	font-size: 20px;
 }
 
